infra/sketch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sketch-service
spec:
  selector:
    app: sketch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
