infra/snake-service.yml
apiVersion: v1
kind: Service
metadata:
  name: snake-service
spec:
  selector:
    app: snake
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
