infra/sketch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sketch-ingress
spec:
  rules:
  - http:
      paths:
      - path: /sketch
        pathType: Prefix
        backend:
          service:
            name: sketch-service
            port:
              number: 80
